fix job status message when key generation fails

If the generation of a key fails for whatever reason we tell the user that
things gone wrong in a messagebox, but the systray message always suggested
that the key was created. Use the same messages for both.

BUG:285081
FIXED-IN:4.7.3